[package]
name = "elusion-lite"
version = "0.1.0"
edition = "2021"
authors = ["Borivoj Grujicic <borivoj.grujicic@gmail.com>"]
description = "Elusion fork"
license = "MIT"
repository = "https://github.com/DataBora/elusion"
homepage = "https://github.com/DataBora/elusion"
readme = "README.md"
keywords = ["data", "engineering", "dataframe", "analysis"]
categories = ["data-structures"]

[dependencies]
datafusion = "43.0.0"
# 
object_store = { version = "0.11.2", default-features = false }
# 
deltalake = { version = "0.23.0", default-features = false }
arrow = { version = "53.2.0", features = ["ipc"] }
chrono = { version = "=0.4.38", features = ["serde"] }
tokio = { version = "1.45.0", features = ["rt-multi-thread"] }
futures = "0.3.31"
regex = "1.11.1"
encoding_rs = "0.8.35"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
plotly = { version = "0.12.1", optional = true }
lazy_static = "1.5.0"
base64 = "0.22.1"
csv = "1.1"
tokio-cron-scheduler = "0.13.0"
bytes = "1.10.0"
num_cpus = "1.0"
tempfile = "3.16.0"
ring = "0.17.12"
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4"], optional = true }
rust_decimal = { version = "1.32", features = ["db-postgres"], optional = true }
rust_xlsxwriter = { version = "0.87.0", optional = true }
calamine = "0.23.1"
once_cell = "1.21.3"

[features]
default = []
dashboard = ["dep:plotly"]
postgres = ["dep:tokio-postgres", "dep:rust_decimal"]
excel = ["dep:rust_xlsxwriter"]

[lib]
name = "elusion"
path = "src/elusion.rs"

[target.'cfg(not(target_os = "windows"))'.dependencies]
openssl = "=0.10.72"